src/test/ui/associated-types/associated-types-overridden-default.stderr
error[E0399]: the following trait items need to be reimplemented as `Assoc` was overridden: `Assoc2`, `C`, `foo`
  --> $DIR/associated-types-overridden-default.rs:11:5
   |
LL |     type Assoc = ();
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0399`.
